# prosody-js

./: .babelrc  .gitignore  .yarnrc.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Readme.md  build.rs  docker-compose.yaml  index.d.ts  index.js  jest.config.js  jsconfig.json  package-lock.json  package.json  release-please-config.json  tsconfig.typecheck.json
.cargo/: config.toml
.github/workflows/: CI.yml  audit.yaml  general.yaml  quality.yaml  release.yml
__test__/: index.spec.js
__test__/types/: keyed-state.type-test.ts  payload-generics.type-test.ts  windowing-example.type-test.ts
examples/: README.md  keyed-state.ts  tsconfig.json  windowing.ts
help/: index.d.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: admin.rs  context.rs  handler.rs  lib.rs  message.rs  state.rs  timer.rs
src/client/: config.rs  mod.rs
src/logging/: js.rs  mod.rs  swappable.rs
