[package]
authors = ["Josh Griffith <joshua.griffith@realgeeks.com>"]
categories = ["api-bindings", "asynchronous", "database"]
description = "Javascript bindings for the Prosody Kafka client library"
edition = "2024"
homepage = "https://github.com/cincpro/prosody-js"
keywords = ["bindings", "client", "javascript", "kafka", "prosody"]
license = "UNLICENSED"
name = "prosody-js"
readme = "Readme.md"
repository = "https://github.com/cincpro/prosody-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
arc-swap = "1.7"
chrono = "0.4"
educe = "0.6"
futures = "0.3"
napi = { version = "2.16", default-features = false, features = [
    "chrono_date",
    "napi4",
    "serde-json",
    "tokio_rt",
] }
napi-derive = "2.16"
opentelemetry = "0.30"
prosody = { git = "https://github.com/cincpro/prosody.git", rev = "833c6a26349b0d77679928471713a18d90bf1e78" } # replace once we have a package manager
serde_json = "1.0"
thiserror = "2.0"
tokio = "1.45"
tracing = { version = "0.1", features = ["log-always"] }
tracing-opentelemetry = "0.31"
tracing-subscriber = "0.3"

[build-dependencies]
napi-build = "2.2"

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[lints.clippy]
blocks_in_conditions = "allow"
cargo = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
create_dir = "warn"
dbg_macro = "warn"
default_numeric_fallback = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
expect_used = "deny"
format_push_string = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
missing_assert_message = "warn"
module_name_repetitions = "allow"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unwrap_used = "deny"
verbose_file_reads = "warn"

[profile.release]
codegen-units = 1
lto = "fat"
